alleen de flex styling nog aanpassen en de laatste 2 opdrachten (2e en 2f

--- a/src/App.css
+++ b/src/App.css
@@ -9,4 +9,18 @@
 .wrapperBoxOne{
     display: flex;
     flex-direction: row;
+    margin: 50px;
+}
+
+.wrapperBoxTwo{
+    display: flex;
+    flex-direction: row;
+    margin: 50px;
+}
+
+.boxTwo{
+    background-color: cornflowerblue;
+    border: 3px solid black;
+    display: flex;
+    flex-direction: column;
 }
