tot opdracht 1d gemaakt

--- a/src/App.css
+++ b/src/App.css
@@ -80,7 +80,7 @@
 .threeButtons{
     display: flex;
     flex-direction: row;
-    gap: 10px;Meest geschikt voor sport eerst
+    gap: 10px;
 }
 
 
